# Dias

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/core/: Calendar.h  CalendarRepository.cpp  CalendarRepository.h  Database.cpp  Database.h  Event.h  EventRepository.cpp  EventRepository.h  ExportService.cpp  ExportService.h  GCalSync.cpp  GCalSync.h  IcsSync.cpp  IcsSync.h  ObsidianIngest.cpp  ObsidianIngest.h  RRule.cpp  RRule.h  ReminderService.cpp  ReminderService.h  SettingsService.cpp  SettingsService.h  Task.h  TaskRepository.cpp  TaskRepository.h
src/mcp/: McpServer.cpp  McpServer.h  main.cpp
src/qml/: CommandPalette.qml  EventEditDialog.qml  Main.qml  MonthView.qml  QuickAddPopup.qml  RecurrenceEditor.qml  TaskEditDialog.qml  Theme.qml  TodoPanel.qml  WeekView.qml  YearView.qml
src/ui/: CalendarListModel.cpp  CalendarListModel.h  EventListModel.cpp  EventListModel.h  TaskListModel.cpp  TaskListModel.h  TrayService.cpp  TrayService.h  UndoService.cpp  UndoService.h
